4.1.11
- Added ticket template files to the Example template of the sites module.

02-01-2012 4.1.10
- 4.1.9 was not build from new repository.

02-01-2012 4.1.9
- Merged fixes from 4.0.145
- Better grid sorting error.
- Better error message for scanbox when linking to items that do not support files.

30-12-2012 4.1.8
- Incorrect data type for default numeric mysql fields
- Fix for servermanager quota's divided by 1024

17-12-2012 4.1.7
- Resource conflict check fixed
- 4.0.143 and 4.0.144 fixes merged
- Deleted participant events are set to cancelled and not deleted automatically.

14-12-2012 4.1.6 (beta)
- Updated Norwegian
- Fix disappearing panel in files
- Fixed invitation update problem

13-12-2012 4.1.5 (beta)
- File search in the filebrowser

07-12-2012 4.1.4 (beta)
- Folder bookmarks. Very handy when you regularly use a handful of folders out of hundreds.

05-12-2012 4.1.3 (beta)
- Problem with recurrence exceptions fixed in ActiveSync
- Event attendance could not be selected
- Events later then current time didn't show

04-12-2012 4.1.2 (beta)
- Small bug fixes

04-12-2012 4.1.1 (beta)
- Fixed the email tree display of  public namespace folders that are subscribed or have subscribed children
- Strange call to another controller action removed in contactcontroller
- It was possible to set addressbook to 0 for contacts
- new curl_proxy option didn't work
- Enabled custom field tabs were not showing
- Item not found error when clicking non events in calendar
- event description without htmlentities

30-11-2012 4.1.0 (beta)
- New calendar invitation system
- When using imap or ldap auth you can choose not to store passwords in the database.
- Improved GUI of the calendar view
- User groups can be added to a calendar view
- Normal users can no longer edit e-mail addresses associated to an account.
- Billing module can import payments from an MT940 file
- Ticket system can be setup for non-users too through the new sites module.