@@ -107,3 +107,8 @@ $l['downloadLinkExpired']= "Der Downloadlink für diese Datei ist abgelaufen";
 $l['notificationEmailSubject']= 'Änderungen im Ordner';
 $l["fileLocked_user_id"]= "Gesperrt durch";
 $l['recentFiles']="Dateien, die in den letzten 7 Tagen verändert wurden";
+
+$l['bookmarkFolder']="Zu Favoriten hinzufügen";
+$l['bookmarks']="Favoriten";
+$l['removeBookmark']="Favoriten entfernen";
+$l['removeBookmarkQuestion']="Ordner '%fn' von Ihrer Favoritenliste entfernen?";
