@@ -2,3 +2,4 @@
 $l['name']='Berechtigungen für die Verfügbarkeit';
 $l['description']='Alle Nutzer müssen andere Nutzer autorisieren, deren terminliche Verfügbarkeit anzuzeigen, wenn dieses Modul aktiviert ist. Ein Button wird unter Einstellungen -> Kalender verfügbar.';
 $l['FreeBusyaccessrights']= 'Berechtigungen für die Verfügbarkeit';
+$l['info']='Gewährt Nutzern und Gruppen Zugriff auf Ihre Verfügbarkeitsinformation. Diese Benutzer sind in der Lage, vorläufige Termine direkt in Ihren Kalender einzutragen.';
